--- a/Slutprojekt expriment/css/style.css
+++ b/Slutprojekt expriment/css/style.css
@@ -6,27 +6,29 @@
     }
     
 /* FÖRSÖK LÄGGA MENYN VERTIKALT VID RESPONSIV */
-
+/* Varför den fuckar upp i responsivce */
 main{
     min-height: 100vh;
     display: grid;
     grid-template-columns: 50vw 50vw;
-    grid-template-rows: auto auto;
+    grid-template-rows: auto auto 300px;
 }
     .container{
         grid-row: 2/3;
         grid-column: 1/3;
-    display: grid;      
-    grid-template-columns: 50vw 50vw;
-    grid-template-rows: auto auto auto auto auto;
-
-
-        
+        display: grid;      
+        grid-template-columns: 50vw 50vw;
+        grid-template-rows: auto auto auto auto auto;
+        text-align: center;
     } 
 
+    .container img{
+        max-width: 40vw;
+}
     .family-img{
         grid-row: 1/2;
         grid-column: 1/2;
+        
     }
     .friends-img{
         grid-row: 2/3;
@@ -70,23 +72,8 @@ main{
         grid-row: 1/2;
         grid-column: 1/2;
         text-align: center;
-        /* border-bottom: 2px solid rgb(88, 85, 85); */
         height: 30vh;
 
-    }
-    
-    
-    nav{
-        /* grid-row: 2/3;
-        grid-column: 2/3; */
-        
-        /* text-decoration: none;
-        font-size: 18px;
-        background-color: beige;
-
-        border-bottom: 2px solid rgb(88, 85, 85);
-        border-top: 2px solid rgb(88, 85, 85);
-        color: rgb(240,87,66); */
     }
   
     ul{
@@ -147,31 +134,14 @@ main{
         text-align: center;      
 
     }
-    
-    .right h1{
-        padding-top: 1rem;
-        color: rgb(240,87,66);
-    }
-    
-    .right p{
-        width: 100%;
 
-    }
-
-    .right img{
-        max-width: 100%;
-        height: auto;
-    }
-
-    
-    
-    /* footer{
-        grid-row: 4/5;
-        grid-column: 1/3;
+    footer{
         background-color: rgb(240,87,66); 
         border-top:2px solid rgb(88, 85, 85);
+        grid-row: 3/4;
+        grid-column: 1/3;
         
-    } */
+    } 
  
     a{
         text-decoration: none;
@@ -224,41 +194,44 @@ main{
 
 /* Mobile */
 /* FLER FOTON I PROJKET, PARAGRAFER INTE ÄR SÅ BREDA DESKTOP I MOBILE TVÄRTOM. */
-@media (max-width: 500px){
-    .container{
+@media (max-width: 600px){
+    .main{
         min-height: 100vh;
         min-width: auto;
-        grid-template-rows: 20vh auto 10%;
-        grid-template-columns: 50% 50%;
+        grid-template-rows: 10vh 10vh auto;
+        grid-template-columns: 100%;
     }
     .header{
         grid-row: 1/2;
-        grid-column: 1/2;
+        grid-column: 1/3;
         border-bottom: 2px solid rgb(99,100,103);
+        /* height: 20vh; */
     }
     nav{
-        grid-row: 1/2;
-        grid-column: 2/3;
-        border-top: none;
+        grid-row: 2/3;
+        grid-column: 1/3;
       
     }
-    .split-left{
-        /* display: flex; */
-        grid-row: 2/3 ;
-        grid-column: 1/2 ;
-        background-color: beige;
-    }
-    .split-right{
-        grid-row: 2/3 ;
-        grid-column: 2/3 ;            
-        background-color: white;        
-    }
-
-    footer{
+    .container{
         grid-row: 3/4;
         grid-column: 1/3;
+        
     }
-
+    /* footer{
+        grid-row: 4/5;
+        grid-column: 1/3;
+    } */
+    .left{
+        grid-row: 3/4 ;
+        grid-column: 1/3 ;
+        background-color: beige;
+    }
+    .right{
+        grid-row: 3/4 ;
+        grid-column: 1/3 ;            
+        background-color: rgb(179, 46, 46);        
+    }
+ 
     .header img{
         max-width: 80%;
         max-height: 80%;
@@ -266,7 +239,7 @@ main{
 
     }
     
-    nav ul{
+    ul{
         max-width: 100%;
         font-size: 12px;
         flex-direction: column;
@@ -280,7 +253,7 @@ main{
         font-size: 12px;
     }
 
-    .split-left img{
+    .left img{
        min-width: 100%;
     }
 
@@ -292,7 +265,7 @@ main{
         font-size: 10px;
     }
 
-    .split-right h1{
+    .right h1{
         font-size: 12px;
 
     }
