--- a/Slutprojekt expriment/css/style.css
+++ b/Slutprojekt expriment/css/style.css
@@ -1,283 +1,400 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: 'Montserrat', sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Montserrat", sans-serif;
+}
 
-    }
-    
 /* FÖRSÖK LÄGGA MENYN VERTIKALT VID RESPONSIV */
-/* Varför den fuckar upp i responsivce */
-main{
-    min-height: 100vh;
-    display: grid;
-    grid-template-columns: 50vw 50vw;
-    grid-template-rows: auto auto 300px;
-}
-    .container{
-        grid-row: 2/3;
-        grid-column: 1/3;
-        display: grid;      
-        grid-template-columns: 50vw 50vw;
-        grid-template-rows: auto auto auto auto auto;
-        text-align: center;
-    } 
-
-    .container img{
-        max-width: 40vw;
-}
-    .family-img{
-        grid-row: 1/2;
-        grid-column: 1/2;
-        
-    }
-    .friends-img{
-        grid-row: 2/3;
-        grid-column: 1/2;
-    }
-    .futsal-img{
-        grid-row: 3/4;
-        grid-column: 1/2;
-    }
-    .travel-img{
-        grid-row: 4/5;
-        grid-column: 1/2;
-    }
-    .gaming-img{
-        grid-row: 5/6;
-        grid-column: 1/2;
-    }
-
-    .family-p{
-        grid-row: 1/2;
-        grid-column: 2/3;
-    }
-    .friends-p{
-        grid-row: 2/3;
-        grid-column: 2/3;
-    }
-    .futsal-p{
-        grid-row: 3/4;
-        grid-column: 2/3;
-    }
-    .travel-p{
-        grid-row: 4/5;
-        grid-column: 2/3;
-    }
-    .gaming-p{
-        grid-row: 5/6;
-        grid-column: 2/3;
-    }
-    
-    .header{
-        grid-row: 1/2;
-        grid-column: 1/2;
-        text-align: center;
-        height: 30vh;
-
-    }
-  
-    ul{
-        grid-row: 2/3;
-        grid-column: 2/3;
-        list-style-type: none;
-        min-height: 30vh;
-        
-        display: flex;
-        flex-flow: row nowrap;
-        align-items: center;    
-        justify-content: center;
-        text-decoration: none;
-        font-size: 18px;
-
-        /* border-bottom: 2px solid rgb(88, 85, 85); */
-        color: rgb(240,87,66);
-    }
-
-    li{
-        padding-left: 2rem;
-        max-height: 2rem;
-        flex-basis: 6%;
-    }
-    
-    .left{
-
-        text-align: center;     
-    }
-    .left h1{
-        color:rgb(240,87,66); ;
-        font-size: 12px
-  }
-  .left p{
-    width: 80%;
-
+main {
+  min-height: 100vh;
+  display: grid;
+  grid-template-columns: 50vw 50vw;
+  grid-template-rows: auto auto 250px;
 }
 
-    .left img{
-        max-width: 50%;
-        height: auto;
-        border-bottom-right-radius: 10%;
-    }
+/* CONTENT UNDER MENY OCH LOGGA MEN OVANFÖR FOOTER PÅ "START"*/
+.container-index {
+  grid-row: 2/3;
+  grid-column: 1/3;
+  display: grid;
+  grid-template-columns: 50vw 50vw;
+  grid-template-rows: auto auto auto auto auto;
+  text-align: center;
+  font-size: 20px;
+}
+.family-img {
+  grid-row: 1/2;
+  grid-column: 1/2;
+}
+.family-p {
+  grid-row: 1/2;
+  grid-column: 2/3;
+  padding: 6%;
+}
 
-    .split-left video{
-        max-width:100%;
-        opacity: 70%;
-    }
+.friends-img {
+  grid-row: 2/3;
+  grid-column: 1/2;
+}
+.friends-p {
+  grid-row: 2/3;
+  grid-column: 2/3;
+  padding: 6%;
+}
 
-    .img-info:hover{
-        background: url("/img/ismail-kids.jpeg");
-    }
+.futsal-img {
+  grid-row: 3/4;
+  grid-column: 1/2;
+}
+.futsal-p {
+  grid-row: 3/4;
+  grid-column: 2/3;
+  padding: 6%;
+}
 
-    .right{
-        grid-row: 1/6;
-        grid-column: 2/3;
-        background-color: beige;  
-        text-align: center;      
+.travel-img {
+  grid-row: 4/5;
+  grid-column: 1/2;
+}
 
-    }
+.travel-p {
+  grid-row: 4/5;
+  grid-column: 2/3;
+  padding: 6%;
+}
 
-    footer{
-        background-color: rgb(240,87,66); 
-        border-top:2px solid rgb(88, 85, 85);
-        grid-row: 3/4;
-        grid-column: 1/3;
-        
-    } 
- 
-    a{
-        text-decoration: none;
-        color: rgb(240,87,66);
-    }
-    
-    a:hover{
-        color: black;
+.gaming-img {
+  grid-row: 5/6;
+  grid-column: 1/2;
+}
+.gaming-p {
+  grid-row: 5/6;
+  grid-column: 2/3;
+  padding: 6%;
+}
 
-    }
+.container-index img {
+  max-width: 40vw;
+}
 
-    img:hover{
-        opacity: 80%;
-    }
+/* CONTENT UNDER MENY OCH LOGGA MEN OVANFÖR FOOTER PÅ "KONTAKT"*/
+.container-kontakt {
+  grid-row: 2/3;
+  grid-column: 1/3;
 
-    p{
-    }
+  display: grid;
+  grid-template-columns: 50vw 50vw;
+  grid-template-rows: auto;
+  font-size: 20px;
+}
+.box-form {
+  border-radius: 5px;
+  padding: 1rem 4rem;
+  text-align: left;
+  color: black;
+  grid-row: 1/2;
+  grid-column: 1/2;
+}
+.right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  grid-row: 1/2;
+  grid-column: 2/3;
+  text-align: center;
+}
 
-    input[type=text], select, textarea {
-        width: 100%;
-        background-color: beige;
-        padding: 10px;
-        border: 1px solid rgb(88, 85, 85);
-        border-radius: 3px;
-        box-sizing: border-box;
-        margin-top: 1px;
-        margin-bottom: 10px;
-        resize: vertical;
-      }
-      
-      input[type=submit] {
-        background-color: rgb(240,87,66);
-        color: white;
-        padding: 12px 20px;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-      }
-      
-      input[type=submit]:hover {
-        background-color:rgba(160, 54, 40, 0.938);
-      }
-      
-      .box-form {
-        border-radius: 5px;
-        padding: 1rem 4rem;
-        text-align: left;
-        color: black;
-      }
+input[type="text"],
+select,
+textarea {
+  width: 100%;
+  background-color: rgb(202, 202, 202);
+  padding: 10px;
+  border: 1px solid rgb(88, 85, 85);
+  border-radius: 3px;
+  box-sizing: border-box;
+  margin-top: 1px;
+  margin-bottom: 10px;
+  resize: vertical;
+}
+
+input[type="submit"] {
+  background-color: rgb(240, 87, 66);
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type="submit"]:hover {
+  background-color: rgba(160, 54, 40, 0.938);
+}
+
+.right img {
+  max-width: 100%;
+}
+
+/* CONTENT UNDER MENY OCH LOGGA MEN OVANFÖR FOOTER PÅ "INFO"*/
+.container-info {
+  grid-row: 2/3;
+  grid-column: 1/3;
+
+  display: grid;
+  grid-template-columns: 50vw 50vw;
+  grid-template-rows: auto;
+  font-size: 20px;
+  text-align: center;
+}
+.right-info {
+  grid-row: 1/2;
+  grid-column: 2/3;
+}
+.right-info img {
+  max-width: 100%;
+}
+
+/* ANNAN STYLING PÅ SIDAN ÄN CONTENT */
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  grid-row: 1/2;
+  grid-column: 1/2;
+  text-align: center;
+}
+
+ul {
+  list-style-type: none;
+  min-height: 30vh;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  font-size: 1.6rem;
+  color: rgb(240, 87, 66);
+}
+
+li {
+  padding-left: 2rem;
+  max-height: 2rem;
+  flex-basis: 6%;
+}
+.left-info {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding: 5rem;
+  padding-right: 5rem;
+}
+
+.left h1 {
+  color: rgb(240, 87, 66);
+  font-size: 12px;
+}
+.left p {
+  width: 80%;
+}
+
+.left video {
+  max-width: 100%;
+  opacity: 70%;
+}
+
+footer {
+  background-color: rgb(240, 87, 66);
+  border-top: 2px solid rgb(88, 85, 85);
+  grid-row: 3/4;
+  grid-column: 1/3;
+  margin-top: 7rem;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(240, 87, 66);
+}
+
+a:hover {
+  color: black;
+}
+
+img:hover {
+  opacity: 80%;
+}
 
 /* Mobile */
-/* FLER FOTON I PROJKET, PARAGRAFER INTE ÄR SÅ BREDA DESKTOP I MOBILE TVÄRTOM. */
-@media (max-width: 600px){
-    .main{
-        min-height: 100vh;
-        min-width: auto;
-        grid-template-rows: 10vh 10vh auto;
-        grid-template-columns: 100%;
-    }
-    .header{
-        grid-row: 1/2;
-        grid-column: 1/3;
-        border-bottom: 2px solid rgb(99,100,103);
-        /* height: 20vh; */
-    }
-    nav{
-        grid-row: 2/3;
-        grid-column: 1/3;
-      
-    }
-    .container{
-        grid-row: 3/4;
-        grid-column: 1/3;
-        
-    }
-    /* footer{
-        grid-row: 4/5;
-        grid-column: 1/3;
-    } */
-    .left{
-        grid-row: 3/4 ;
-        grid-column: 1/3 ;
-        background-color: beige;
-    }
-    .right{
-        grid-row: 3/4 ;
-        grid-column: 1/3 ;            
-        background-color: rgb(179, 46, 46);        
-    }
- 
-    .header img{
-        max-width: 80%;
-        max-height: 80%;
-    
+/* FLER FOTON I PROJEKTET, PARAGRAFER INTE ÄR SÅ BREDA DESKTOP I MOBILE TVÄRTOM. */
+@media (max-width: 520px) {
+  main {
+    min-height: 100vh;
+    min-width: auto;
+    grid-template-rows: 10vh 10vh auto 10vh;
+    grid-template-columns: 100%;
+  }
+  .header {
+    grid-row: 1/2;
+    grid-column: 1/3;
+    border-bottom: 2px solid rgb(99, 100, 103);
+  }
+  nav {
+    grid-row: 2/3;
+    grid-column: 1/3;
+    border-bottom: 2px solid rgb(99, 100, 103);
+    padding-bottom: 0.5rem;
+  }
 
-    }
-    
-    ul{
-        max-width: 100%;
-        font-size: 12px;
-        flex-direction: column;
-        
-    }
-    li{
-        padding: 0.4rem;
+  /* CONTENT UNDER MENY OCH LOGGA MEN OVANFÖR FOOTER PÅ "START"*/
+  .container-index {
+    grid-row: 3/4;
+    grid-column: 1/3;
 
-    }
-    p{
-        font-size: 12px;
-    }
+    display: grid;
+    grid-template-rows: auto auto auto auto auto auto auto auto auto auto;
+    grid-template-columns: 100%;
+  }
 
-    .left img{
-       min-width: 100%;
-    }
+  /* CONTENT UNDER MENY OCH LOGGA MEN OVANFÖR FOOTER PÅ "KONTAKT"*/
+  .container-kontakt {
+    grid-row: 3/4;
+    grid-column: 1/2;
+    display: grid;
+    grid-template-rows: auto auto;
+    grid-template-columns: 100vw;
+  }
 
-    input{
-        font-size: 10px;
-    }
+  /* CONTENT UNDER MENY OCH LOGGA MEN OVANFÖR FOOTER PÅ "INFO"*/
+  .container-info {
+    grid-row: 3/4;
+    grid-column: 1/2;
+    display: grid;
 
-    text{
-        font-size: 10px;
-    }
+    grid-template-rows: auto auto;
+    grid-template-columns: 100vw;
+  }
+  .right-info {
+    grid-row: 1/2;
+    grid-column: 1/3;
+  }
+  .left-info {
+    grid-row: 2/3;
+    grid-column: 1/3;
+  }
+  h1 {
+    font-size: 25px;
+  }
 
-    .right h1{
-        font-size: 12px;
+  footer {
+    grid-row: 5/6;
+    grid-column: 1/3;
+    /* grid-row: 4/5; */
+  }
+  .right {
+    grid-row: 1/2;
+    grid-column: 1/3;
+  }
+  /* .left {
+    grid-row: 2/3;
+    grid-column: 1/2;
+    background-color: beige;
+  }  */
 
-    }
-    .box-form {
-        border-radius: 5px;
-        /* padding: 1rem 4rem; */
-        color: black;
-        min-width: 100%;
-        font-size: 10px;
-        align-items: flex-start;
-      }
-      .box-form form{
+  .header img {
+    max-width: 80%;
+    max-height: 80%;
+  }
 
-      }
+  ul {
+    max-width: 100%;
+    min-height: 8vh;
+    font-size: 12px;
+    flex-direction: column;
+  }
+  nav {
+    max-height: 8vh;
+  }
+  li {
+    padding: 0.4rem;
+  }
+  p {
+    font-size: 12px;
+  }
+
+  .left img {
+    min-width: 100%;
+  }
+
+  input {
+    font-size: 10px;
+  }
+
+  textarea {
+    font-size: 10px;
+  }
+
+  /* .right h1 {
+    font-size: 12px; */
+}
+.box-form {
+  border-radius: 5px;
+  color: black;
+  min-width: 50%;
+  font-size: 10px;
+  grid-row: 2/3;
+  grid-column: 1/3;
+}
+
+.family-img {
+  padding: none;
+  grid-row: 1/2;
+  grid-column: 1/2;
+}
+.friends-img {
+  padding: none;
+  grid-row: 3/4;
+  grid-column: 1/2;
+}
+.futsal-img {
+  padding: none;
+  grid-row: 5/6;
+  grid-column: 1/2;
+}
+
+.travel-img {
+  padding: none;
+  grid-row: 7/8;
+  grid-column: 1/2;
+}
+
+.gaming-img {
+  padding: none;
+  grid-row: 9/10;
+  grid-column: 1/2;
+}
+.family-p {
+  padding: none;
+  grid-row: 2/3;
+  grid-column: 1/2;
+}
+.friends-p {
+  padding: none;
+  grid-row: 4/5;
+  grid-column: 1/2;
+}
+.futsal-p {
+  padding: none;
+  grid-row: 6/7;
+  grid-column: 1/2;
+}
+
+.travel-p {
+  padding: none;
+  grid-row: 8/9;
+  grid-column: 1/2;
+}
+
+.gaming-p {
+  padding: none;
+  grid-row: 10/11;
+  grid-column: 1/2;
 }
